Prepare for use on lucaversari.it

--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -57,7 +57,7 @@ if y > 150
     <button disabled id="png" class="button">Download PNG ⬇️</button>
     <div id="credits">
       Made with 🤪 by <a href="https://twitter.com/dassurma">Surma</a>. <br />
-      <a href="https://github.com/surma/jxl-art">Source</a> on GitHub.
+      Forked and updated by veluca93. <a href="https://github.com/veluca93/jxl-art">Source</a> on GitHub.
     </div>
   </footer>
 </div>
