--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -5,37 +5,37 @@
 <link rel="stylesheet" href="<%= emitAsset('src/styles.css') %>" />
 <div id="controls">
   <textarea id="code">
-    Bitdepth 8
-    Orientation 7
-    RCT 6
+Bitdepth 8
+Orientation 7
+RCT 6
 
-    if y > 150
-      if c > 0
-        - N 0
+if y > 150
+  if c > 0
+    - N 0
+    if x > 500
+      if WGH > 5
+        - AvgN+NW + 2
+        - AvgN+NE - 2
+      if x > 470
+        - AvgW+NW -2
+        if WGH > 0
+          - AvgN+NW +1
+          - AvgN+NE - 1
+  if y > 136
+    if c > 0
+      if c > 1
         if x > 500
-          if WGH > 5
-            - AvgN+NW + 2
-            - AvgN+NE - 2
-          if x > 470
-            - AvgW+NW -2
-            if WGH > 0
-              - AvgN+NW +1
-              - AvgN+NE - 1
-      if y > 136
-        if c > 0
-          if c > 1
-            if x > 500
-              - Set -20
-              - Set 40
-            if x > 501
-              - W - 1
-              - Set 150
-          if x > 500
-            - N + 5
-            - N - 15
-        if W > -50
-          - Weighted -1
-          - Set 320
+          - Set -20
+          - Set 40
+        if x > 501
+          - W - 1
+          - Set 150
+      if x > 500
+        - N + 5
+        - N - 15
+    if W > -50
+      - Weighted -1
+      - Set 320
   </textarea>
   <button id="run" disabled class="button">Run ▶️</button>
   <button id="share" class="button">Share 🌍</button>
@@ -50,7 +50,7 @@
 </div>
 <div id="output">
   <pinch-zoom id="zoom">
-    <canvas id="cvs" width="1024" height="1024"></canvas>
+    <img id="img"/>
   </pinch-zoom>
   <footer>
     <button disabled id="jxl" class="button">Download JXL ⬇️</button>
